--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <title>title</title>
     <link rel="stylesheet" href="index.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
     <script src="data.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
+    <div id='header'></div>
     <div id='main'></div>
+    <div id='footer'></div>
   </body>
 </html>
