--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+    <script src="functions.js"></script>
     <script src="data.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
-    <div id='header'></div>
+    <div id='header'>
+      
+      <div id='options'>
+        <div id='sortLabel'>Sort:</div>
+        <div id='byMovie' class='sortToggle'>Movie</div>
+        <div id='byTheater' class='sortToggle'>Theater</div>
+      </div> 
+    </div>
     <div id='main'></div>
     <div id='footer'></div>
   </body>
