--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id='header'>
       
       <div id='options'>
-        <div id='sortLabel'>Sort:</div>
+        <div id='sortLabel'>Sort By:</div>
         <div id='byMovie' class='sortToggle'>Movie</div>
         <div id='byTheater' class='sortToggle'>Theater</div>
       </div> 
