turning into php to serve onto heroku

--- a/home.html
+++ b/home.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
+
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
@@ -14,6 +16,7 @@
   </head>
   <body>
     <div id='header'>
+    <i class="icon-beer"></i>
       <div id='options'>
         <div id='sortLabel'>Sort By:</div>
         <div id='byMovie' class='sortToggle'>Movie</div>
