--- a/home.html
+++ b/home.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>title</title>
 
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="./font-awesome-4.2.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="index.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
@@ -16,7 +17,11 @@
   </head>
   <body>
     <div id='header'>
-    <i class="icon-beer"></i>
+      <div id='board'>
+          <i class="fa fa-beer fa-2x"></i>
+          <h1>Pub Theaters</h1>
+          <h4>Drinks or a movie... Why choose?</h4>
+      </div>
       <div id='options'>
         <div id='sortLabel'>Sort By:</div>
         <div id='byMovie' class='sortToggle'>Movie</div>
