changed http to https for google font and added any missing files (fontawesome??)

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>title</title>
 
     <link rel="stylesheet" href="./font-awesome-4.2.0/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="index.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
@@ -29,6 +29,9 @@
       </div> 
     </div>
     <div id='main'></div>
-    <div id='footer'></div>
+    <div id='footer'>
+      
+      <div id='credit'>Created By: <a href='micjm.com'>Michael Mayer</a></div>
+    </div>
   </body>
 </html>
