--- a/home.html
+++ b/home.html
@@ -15,6 +15,17 @@
     <script src="functions.js"></script>
     <script src="data.js"></script>
     <script src="index.js"></script>
+    <!--google tracking code  -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-43260012-2', 'auto');
+    ga('send', 'pageview');
+
+  </script>
   </head>
   <body>
     <div id='header'>
@@ -32,7 +43,7 @@
     <div id='main'></div>
     <div id='footer'>
       
-      <div id='credit'>Created By: <a href='micjm.com'>Michael Mayer</a></div>
+      <div id='credit'>Created By: <a href='http://www.micjm.com'>Michael Mayer</a></div>
     </div>
   </body>
 </html>
